src/styles/style.scss
// Copyright (c) 2020 Alaska Airlines. All right reserved. Licensed under the Apache-2.0 license
// See LICENSE in the project root for license information.

// ---------------------------------------------------------------------

/* stylelint-disable scss/dollar-variable-empty-line-before, at-rule-empty-line-before, order/properties-order, scss/selector-nest-combinators, declaration-empty-line-before,
   scss/at-extend-no-missing-placeholder,  declaration-no-important, selector-max-combinators, selector-max-compound-selectors, no-descending-specificity, color-function-notation */

// Import Auro tokens
@use "@aurodesignsystem/design-tokens/dist/legacy/auro-classic/SCSSVariables" as vac;
@use "@aurodesignsystem/webcorestylesheets/dist/bundled/type/classes.alaska.min.css";

@use "@aurodesignsystem/webcorestylesheets/src/breakpoints" as bp;
@use "@aurodesignsystem/webcorestylesheets/src/core";

@use "@aurodesignsystem/webcorestylesheets/src/utilityClasses/displayProperties";
$auro-inset-spacing-options: lg;
$auro-inset-directions: '';
@use "@aurodesignsystem/webcorestylesheets/src/utilityMixins/insetUtility";

::slotted(*) {
  white-space: normal;
}

::slotted(*:hover) {
  cursor: pointer;
}

[data-trigger-placement]::slotted(*:hover) {
  position: relative;

  &:before {
    position: absolute;
    left: 0;

    display: block;

    width: 100%;
    height: calc(var(--ds-size-200, vac.$ds-size-200) + var(--ds-size-50, vac.$ds-size-50));

    content: '';
  }
}

[data-trigger-placement^='top']::slotted(*:hover) {
  &:before {
    top: calc(-1 * calc(var(--ds-size-200, vac.$ds-size-200) + var(--ds-size-50, vac.$ds-size-50)));
  }
}

[data-trigger-placement^='bottom']::slotted(*:hover) {
  &:before {
    bottom: calc(-1 * calc(var(--ds-size-200, vac.$ds-size-200) + var(--ds-size-50, vac.$ds-size-50)));
  }
}

:host(:not([data-show])),
:host([disabled]) {
  .popover {
    @extend .util_displayHidden;
  }
}

:host([data-show]) {
  .popover {
    z-index: var(--ds-depth-tooltip, vac.$ds-depth-tooltip);
  }
}

:host([removeSpace]) {
  .popover {
    // calc = -5px
    margin: calc(-1 * calc(var(--ds-size-50, vac.$ds-size-50) + 1px)) 0 !important;
  }
}

:host([addSpace]) {
  .popover {
    margin: var(--ds-size-200, vac.$ds-size-200) 0 !important;
  }

  [data-trigger-placement]::slotted(*:hover) {
    &:before {
      height: var(--ds-size-500, vac.$ds-size-500);
    }
  }

  [data-trigger-placement^='top']::slotted(*:hover) {
    &:before {
      top: calc(-1 * var(--ds-size-500, vac.$ds-size-500));
    }
  }

  [data-trigger-placement^='bottom']::slotted(*:hover) {
    &:before {
      bottom: calc(-1 * var(--ds-size-500, vac.$ds-size-500));
    }
  }

  :host(:not([data-show])) {
    .popover {
      @extend .util_displayHidden;
    }
  }
}

.popover {
  display: inline-block;

  max-width: calc(100% - var(--ds-size-400, vac.$ds-size-400));

  border-radius: var(--ds-border-radius, vac.$ds-border-radius);

  @include bp.auro_grid-breakpoint--sm {
    max-width: 50%;
  }
  @include bp.auro_grid-breakpoint--md {
    max-width: 40%;
  }
  @include bp.auro_grid-breakpoint--lg {
    max-width: 27rem;
  }
}

[data-popper-placement^='top'] > .arrow {
  // calc = -10px
  bottom: calc(-1 * calc(var(--ds-size-100, vac.$ds-size-100) + var(--ds-size-25, vac.$ds-size-25)));

  &:before {
    // calc = -16px
    top: calc(-1 * var(--ds-size-200, vac.$ds-size-200));

    // calc = -6px
    left: calc(-1 * var(--ds-size-75, vac.$ds-size-75));

    transform: rotate(45deg);
  }
}

[data-popper-placement^='bottom'] > .arrow {
  // calc = -10px
  top: calc(-1 * calc(var(--ds-size-100, vac.$ds-size-100) + var(--ds-size-25, vac.$ds-size-25)));

  &:before {
    top: var(--ds-size-50, vac.$ds-size-50);
    right: calc(-1 * var(--ds-size-200, vac.$ds-size-200));

    transform: rotate(-135deg);
  }
}

.arrow {
  position: relative;

  margin-top: -var(--ds-size-100, vac.$ds-size-100);

  &:before {
    position: absolute;

    width: var(--ds-size-150, vac.$ds-size-150);
    height: var(--ds-size-150, vac.$ds-size-150);

    content: '';
  }
}

